--- a/klasa-5/index.html
+++ b/klasa-5/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/music.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Audycje PSM - klasa 4</title>
-		<script src="/src/pages/klasa-4/main.ts" type="module"></script>
+		<title>Audycje PSM - klasa 5</title>
+		<script src="/src/klasa-5.ts" type="module"></script>
 	</head>
 	<body class="h-screen flex flex-col justify-between items-center gap-6 p-4 pt-0">
 		<div class="navbar justify-center">
@@ -26,9 +26,11 @@
 						/>
 					</svg>
 				</a>
-				<a class="btn btn-primary sm:w-44 md:w-52 lg:btn-wide" disabled href="/klasa-4">klasa 4</a>
-				<a class="btn btn-secondary sm:w-44 md:w-52 lg:btn-wide" href="/klasa-5">klasa 5</a>
-				<a class="btn btn-accent sm:w-44 md:w-52 lg:btn-wide" href="/klasa-6">klasa 6</a>
+				<a class="btn btn-primary sm:w-44 md:w-52 lg:btn-wide" href="/klasa-4/">klasa 4</a>
+				<a class="btn btn-secondary sm:w-44 md:w-52 lg:btn-wide" disabled href="/klasa-5/"
+					>klasa 5</a
+				>
+				<a class="btn btn-accent sm:w-44 md:w-52 lg:btn-wide" href="/klasa-6/">klasa 6</a>
 			</div>
 		</div>
 
